Bug 1719437 - Do not initialize shaders when creating SingletonGL for software webrender. r=aosmond

It leads to OpenGL errors, as we must initialize a webrender Device in
order to initialize the shaders, and this Device attempts to use
OpenGL commands not supported by the GL context. For example the GL
context may only support GLES 2, hence why we are using SWGL in the
first place.

Differential Revision: https://phabricator.services.mozilla.com/D120356